<resources>
    <string name="app_name">Individual15y16</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a_logo_trivia_ingresa_tu_nombre_para_comenzar">Bienvenido a Logo Trivia, Ingresa tu nombre para comenzar</string>
    <string name="ingresa_tu_nombre">Ingresa tu Nombre</string>
    <string name="pertenece_a_facebook">Pertenece a Facebook</string>
    <string name="pertenece_a_instagram">Pertenece a Instagram</string>
    <string name="pertenece_a_tiktok">Pertenece a TikTok</string>
    <string name="pertenece_a_whatsapp">Pertenece a Whatsapp</string>
    <string name="hola">HOLA,</string>
    <string name="imagen_a_mostrar">Imagen a mostrar</string>
    <string name="a_que_aplicacion_corresponde_la_imagen">¿A que aplicacion corresponde la Imagen?</string>
    <string name="enviar">ENVIAR</string>
    <string name="te_equivocaste">Te Equivocaste</string>
    <string name="eleccion_correcta">Eleccion Correcta</string>
    <string name="intentalo_otra_vez">Intentalo otra vez</string>
</resources>